added settings component to frontend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,7 @@
 
     <title>taboo4</title>
     <base href="/">
+    <script>let NGXSTORE_CONFIG= {prefix: 'taboo4_'}</script>
 </head>
 <body>
     <div class="container-fluid">
