--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="assets/sothawofant-32.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <title>taboo4</title>
-    <base href="/taboo4/">
+    <base href="/">
 </head>
 <body>
     <div class="container-fluid">
